--- a/index.html
+++ b/index.html
@@ -3,68 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home | souvik roy</title>
+    <title>home | SK</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand"><a href="/">souvik roy</a></div>
+        <div class="nav-brand"><a href="">SK</a></div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/projects.html">projects</a>
+                <a class="link" href="projects.html">projects</a>
             </li>
-            <li class="list-item-inline">
+            <!-- <li class="list-item-inline">
                 <a class="link" href="/blogs.html">blogs</a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 
     <header class="hero">
         <img class="hero-img" src="images/hero.svg" />
-        <h1 class="hero-heading">souvik roy the <span class="heading-inverted"> web developer</span></h1>
+        <h1 class="hero-heading">Hi I'm <span class="heading-inverted"> Souvik</span></h1>
+        <large class="hero-sub">a UI developer</large>
     </header>
 
     <section class="section ow">
         <div class="container container-center">
-            <h1>technologies</h1>
+            <h1>Technologies</h1>
             <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
         </div>
     </section>
 
     <section class="section">
         <div class="container container-center">
-            <h1>projects</h1>
+            <h1>Projects</h1>
             <p>I like to showcase my work and thus, you can see my projects hosted online</p>
-            <a class="link link-primary" href="/projects.html">See Projects</a>
+            <a class="link link-primary" href="projects.html">See Projects</a>
         </div>
     </section>
 
-    <section class="section ow">
+    <!-- <section class="section ow">
         <div class="container container-center">
-            <h1>blogs</h1>
+            <h1>Blogs</h1>
             <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
             <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
         </div>
-    </section>
+    </section> -->
 
     <footer class="footer">
         <div class="footer-header">social media presence</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/tanaypratap">
+                <a class="link" href="https://github.com/sk-roy98">
                     github
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/tanaypratap">
+                <a class="link" href="https://twitter.com/skroy98">
                     twitter
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://linkedin.com/in/tanaypratap">
+                <a class="link" href="https://linkedin.com/in/skroy98">
                     linkedin
                 </a>
             </li>
