--- a/blogs.html
+++ b/blogs.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" />
-    <title>blogs | souvik roy</title>
+    <title>blogs | SKroy</title>
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand"><a href="/">souvik roy</a></div>
+        <div class="nav-brand"><a href="/">SKroy</a></div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/">home</a>
@@ -34,7 +34,7 @@
             <small>November, 2020</small>
             <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin words.</p>
 
-            <a class="link link-primary" href="https://repl.it/@tanaypratap/quiz-on-marvel?embed=true">Read More</a>
+            <a class="link link-primary" href="blog1.html">Read More</a>
             </article>
             
         </li>
@@ -56,17 +56,17 @@
         <div class="footer-header">social media presence</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/tanaypratap">
+                <a class="link" href="https://github.com/sk-roy98>
                     github
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/tanaypratap">
+                <a class="link" href="https://twitter.com/skroy98">
                     twitter
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://linkedin.com/in/tanaypratap">
+                <a class="link" href="https://linkedin.com/in/skroy98">
                     linkedin
                 </a>
             </li>
