--- a/dummy-blog.html
+++ b/dummy-blog.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet" />
-    <title>blogs | adarshbalika</title>
+    <title>blogs | SKroy</title>
 </head>
 
 <body>
     <nav class="navigation container">
-        <div class="nav-brand"><a href="/">adarshbalika</a></div>
+        <div class="nav-brand"><a href="/">SKroy</a></div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/">home</a>
@@ -51,17 +51,17 @@
         <div class="footer-header">social media presence</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/tanaypratap">
+                <a class="link" href="https://github.com/sk-roy98">
                     github
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/tanaypratap">
+                <a class="link" href="https://twitter.com/skroy98">
                     twitter
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://linkedin.com/in/tanaypratap">
+                <a class="link" href="https://linkedin.com/in/skroy98">
                     linkedin
                 </a>
             </li>
