--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home | SK</title>
+    <link rel="icon" href="my_icon.ico">
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
