--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,12 @@
             <li class="list-item-inline">
                 <a class="link link-active" href="/projects.html">projects</a>
             </li>
-            <!-- <li class="list-item-inline">
+            <li class="list-item-inline">
                 <a class="link" href="/blogs.html">blogs</a>
-            </li> -->
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/#contacts">contact</a>
+            </li>
         </ul>
     </nav>
 
@@ -30,9 +33,9 @@
 
         <li>
             <article class="showcase-list container container-center ">
-                <h1>goodbooks</h1>
+                <h1>goodshows</h1>
             <small>March, 2021</small>
-            <p>Do you read books? You would find some good recommendations for all the genre. Made using ReactJS with love</p>
+            <p>Struggling to decide what to binge on? Here you will find some of my favourite shows categorised on genre, Made using ReactJS with love</p>
 
             <a class="link link-primary" href="https://pm7ty.csb.app/">Live Project</a>
             <a class="link link-secondary" href="https://github.com/sk-roy98/goodBooks.git">View Source</a>
@@ -43,7 +46,7 @@
 
         <li>
             <article class="showcase-list container container-center ">
-                <h1>emoji interpreter</h1>
+                <h1>what emoji</h1>
             <small>March, 2021</small>
             <p>I struggle with understanding the emojis. Do you too? If yes, then see this library of emojis with meaning</p>
 
@@ -56,7 +59,7 @@
 
         <li>
             <article class="showcase-list container container-center ">
-                <h1>talk-bananaa</h1>
+                <h1>talk bananaa</h1>
             <small>February, 2021</small>
             <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
 
@@ -96,7 +99,7 @@
         <li>
             <article class="showcase-list container container-center ">
                 <h1>how well do you know me?</h1>
-                <small>November, 2020</small>
+                <small>january, 2020</small>
                 <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who really knows you</p>
     
                 <a class="link link-primary" href="https://repl.it/@souvik98/do-you-know-me?embed=true">Live Project</a>
@@ -107,8 +110,8 @@
 
         <li>
             <article class="showcase-list container container-center ">
-                <h1>how well do you know html basics?</h1>
-            <small>November, 2020</small>
+                <h1>how well do you know html?</h1>
+            <small>january, 2020</small>
             <p>Do you know code basics? Let's play a quiz and see.</p>
 
             <a class="link link-primary" href="https://repl.it/@souvik98/Code-Quiz?embed=true">Live Project</a>
@@ -121,7 +124,7 @@
     </ul>
 
     <footer class="footer">
-        <div class="footer-header">social media presence</div>
+        <div class="footer-header">connect social media</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
                 <a class="link" href="https://github.com/sk-roy98">
