--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
             <li class="list-item-inline">
                 <a class="link" href="projects.html">projects</a>
             </li>
-            <!-- <li class="list-item-inline">
+            <li class="list-item-inline">
                 <a class="link" href="/blogs.html">blogs</a>
-            </li> -->
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="#contacts">contact</a>
+            </li>
         </ul>
     </nav>
 
@@ -44,16 +47,22 @@
         </div>
     </section>
 
-    <!-- <section class="section ow">
+    <section class="section ow">
         <div class="container container-center">
             <h1>Blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
+            <p>I would like to showcase few of my blogs, that I have created on my journey of learning.</p>
             <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
         </div>
-    </section> -->
+    </section>
+    <section>
+        <div id="contacts">
+            <a class="btn" href="mailto:roysouvik98@gmail.com">Mail Me</a>
+            <larger style="word-spacing: 4px;">  or call me at: <span class="number"> 700182661 </span></larger>
+        </div>    
+    </section>
 
     <footer class="footer">
-        <div class="footer-header">social media presence</div>
+        <div class="footer-header">connect social media</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
                 <a class="link" href="https://github.com/sk-roy98">
