--- a/projects.html
+++ b/projects.html
@@ -59,9 +59,22 @@
 
         <li>
             <article class="showcase-list container container-center ">
+                <h1>speak Dothraki</h1>
+            <small>March, 2021</small>
+            <p>Have you watched Game of Thrones? if yes then you must be familiar with how Dothrakis' speak. Use the translater to convert your text from english to Dothraki language.</p>
+
+            <a class="link link-primary" href="https://sayindothraki.netlify.app/">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/sk-roy98/speakDothraki.git">View Source</a>
+
+            </article>
+            
+        </li>
+
+        <li>
+            <article class="showcase-list container container-center ">
                 <h1>talk bananaa</h1>
             <small>February, 2021</small>
-            <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
+            <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or banana language.</p>
 
             <a class="link link-primary" href="https://talk-bananaa.netlify.app/">Live Project</a>
             <a class="link link-secondary" href="https://github.com/sk-roy98/talk-banana.git">View Source</a>
@@ -99,7 +112,7 @@
         <li>
             <article class="showcase-list container container-center ">
                 <h1>how well do you know me?</h1>
-                <small>january, 2020</small>
+                <small>January, 2020</small>
                 <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who really knows you</p>
     
                 <a class="link link-primary" href="https://repl.it/@souvik98/do-you-know-me?embed=true">Live Project</a>
@@ -111,7 +124,7 @@
         <li>
             <article class="showcase-list container container-center ">
                 <h1>how well do you know html?</h1>
-            <small>january, 2020</small>
+            <small>January, 2020</small>
             <p>Do you know code basics? Let's play a quiz and see.</p>
 
             <a class="link link-primary" href="https://repl.it/@souvik98/Code-Quiz?embed=true">Live Project</a>
