--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,31 @@
 
         <li>
             <article class="showcase-list container container-center ">
+                <h1>Twattle</h1>
+            <small>May, 2021</small>
+            <p>How cool is to hangout with your friends virtually all at one place. Here is my personal chat app with user authentication. </p>
+            <a class="link link-primary" href="https://twattle.netlify.app/">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/sk-roy98/twattle-chat-app.git">View Source</a>
+
+            </article>
+            
+        </li>
+
+        <li>
+            <article class="showcase-list container container-center ">
+                <h1>Tuchukk</h1>
+            <small>April, 2021</small>
+            <p>Wondering if there is a platform where you could store your favourite clicks and view it anytime? Well I present you Tuchukk photo gallery web app where you can upload your favourite photos and view it anytime you want. </p>
+
+            <a class="link link-primary" href="https://tuchukk.netlify.app/">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/sk-roy98/tuchukk-photogallery.git">View Source</a>
+
+            </article>
+            
+        </li>
+
+        <li>
+            <article class="showcase-list container container-center ">
                 <h1>goodshows</h1>
             <small>March, 2021</small>
             <p>Struggling to decide what to binge on? Here you will find some of my favourite shows categorised on genre, Made using ReactJS with love</p>
