--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/my_icon.ico">
     <link href="styles.css" rel="stylesheet" />
     <title>projects | SK</title>
 </head>
