--- a/dummy-blog.html
+++ b/dummy-blog.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/my_icon.ico">
     <link href="styles.css" rel="stylesheet" />
     <title>blogs | SK</title>
 </head>
