--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,18 @@
 
         <li>
             <article class="showcase-list container container-center ">
+                <h1>Flickz</h1>
+            <small>May, 2021</small>
+            <p>Get to know about latest trending movies and series all at one place and their cast too.. you can always redirect to youtube trailer whenever you want to.</p>
+            <a class="link link-primary" href="https://skflickz.netlify.app">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/sk-roy98/flickz-movie-app.git">View Source</a>
+
+            </article>
+            
+        </li>
+
+        <li>
+            <article class="showcase-list container container-center ">
                 <h1>Twattle</h1>
             <small>May, 2021</small>
             <p>How cool is to hangout with your friends virtually all at one place. Here is my personal chat app with user authentication. </p>
@@ -115,8 +127,8 @@
             <small>December, 2020</small>
             <p>Let's play drums with your keyboard, pressing assigned keys in your keyboard or by clicking the buttons in your screen a drumkit's sound gets played!</p>
 
-            <a class="link link-primary" href="https://sktindog.netlify.app/">Live Project</a>
-            <a class="link link-secondary" href="https://github.com/sk-roy98/bootstrap4_tindog.git">View Source</a>
+            <a class="link link-primary" href="https://drummkeys.netlify.app">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/sk-roy98/drum-keys.git">View Source</a>
 
             </article>
             
